--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation 'com.github.ZsoltMolnarrr:ProjectileDamage:1.18.2-1.0.2-2'
+    modImplementation 'com.github.ZsoltMolnarrr:ProjectileDamage:1.18.2-1.0.4'
 }
 
 processResources {
