Update projectile damage dependency

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,13 @@ repositories {
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
-    maven { url "https://jitpack.io" }
+    maven {
+        name = 'Modrinth'
+        url = 'https://api.modrinth.com/maven'
+        content {
+            includeGroup 'maven.modrinth'
+        }
+    }
 }
 
 dependencies {
@@ -27,7 +33,7 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-    modImplementation 'com.github.ZsoltMolnarrr:ProjectileDamage:1.18.2-1.0.6'
+    modImplementation "maven.modrinth:projectile-damage-attribute:${project.projectile_version}"
 }
 
 processResources {
