--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ archives_base_name=powerscale
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.57.0+1.18.2
+projectile_version=1.0.7
