--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
             includeGroup 'maven.modrinth'
         }
     }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -34,6 +35,7 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     modImplementation "maven.modrinth:projectile-damage-attribute:${project.projectile_version}"
+    modApi include("com.github.ZsoltMolnarrr:TinyConfig:${project.tiny_config_version}")
 }
 
 processResources {
