--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.2
-yarn_mappings=1.18.2+build.3
-loader_version=0.14.8
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.8
+loader_version=0.14.9
 # Mod Properties
 mod_version=1.0.4
 maven_group=net
 archives_base_name=powerscale
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.57.0+1.18.2
-projectile_version=1.0.7
+fabric_version=0.60.0+1.19.2
+projectile_version=1.0.8+1.19
+tiny_config_version=1.0.2
