--- a/build.gradle
+++ b/build.gradle
@@ -130,7 +130,7 @@ if(project.hasProperty('release_type')) {
 
     modrinth {
         token = System.getenv("MODRINTH_API_KEY")
-        projectId = "power-scale" // This can be the project ID or the slug. Either will work!
+        projectId = "dungeon-difficulty" // This can be the project ID or the slug. Either will work!
         versionNumber = "${version}" // You don't need to set this manually. Will fail if Modrinth has this version already
         versionType = release_type // This is the default -- can also be `beta` or `alpha`
         uploadFile = remapJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
