--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,17 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.8
-loader_version=0.14.9
+# Gradle
+org.gradle.jvmargs=-Xmx6G
+
 # Mod Properties
-mod_version=1.1.1
+mod_version=1.2.0
 maven_group=net
 archives_base_name=dungeon_difficulty
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
+
+# Fabric Properties
+minecraft_version=1.19.2
 fabric_version=0.60.0+1.19.2
-projectile_version=2.2.0+1.19
-tiny_config_version=2.0.2
+yarn_mappings=1.19.2+build.8
+loader_version=0.14.9
+
+# Dependencies
+projectile_version=3.0.0+1.19
+tiny_config_version=2.1.1
