--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,18 @@
 # Gradle
 org.gradle.jvmargs=-Xmx6G
 
+# Game
+minecraft_version=1.19.2
+
+# Fabric Properties
+fabric_version=0.60.0+1.19.2
+yarn_mappings=1.19.2+build.8
+loader_version=0.14.9
+
 # Mod Properties
 mod_version=1.2.0
 maven_group=net
 archives_base_name=dungeon_difficulty
-
-# Fabric Properties
-minecraft_version=1.19.2
-fabric_version=0.60.0+1.19.2
-yarn_mappings=1.19.2+build.8
-loader_version=0.14.9
 
 # Dependencies
 projectile_version=3.0.0+1.19
