--- a/build.gradle
+++ b/build.gradle
@@ -137,6 +137,7 @@ if(project.hasProperty('release_type')) {
         uploadFile = remapJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
         gameVersions = ["${project.minecraft_version}"] // Must be an array, even with only one version
         loaders = ["fabric"] // Must also be an array - no need to specify this if you're using Loom or ForgeGradle
+        changelog = changelog_last_section()
         dependencies { // A special DSL for creating dependencies
             // scope.type
             // The scope can be `required`, `optional`, `incompatible`, or `embedded`
